Final bug fixing
