# src/main/swagger/swagger.yaml
@@ -79,8 +79,33 @@ paths:
           in: path
           description: ID of repository to return
           required: true
-          type: integer
-          format: int64
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/Repository"
+        "400":
+          description: Invalid ID supplied
+        "404":
+          description: Repository not found
+    delete:
+      tags:
+        - repository
+      summary: Delete repository by ID
+      x-swagger-router-controller: RepositoryController
+      description: Returns a dead code analysis
+      operationId: removeRepo
+      consumes:
+        - application/x-www-form-urlencoded
+      produces:
+        - application/json
+      parameters:
+        - name: repositoryId
+          in: path
+          description: ID of repository to return
+          required: true
+          type: string
       responses:
         "200":
           description: successful operation
@@ -96,8 +121,7 @@ definitions:
       - url
     properties:
       id:
-        type: integer
-        format: int64
+        type: string
       deadCode:
         type: array
         items:
